--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <section class="skills">
             <div class="interface">
                 <h2 class="title">HABILIDADES</h2>
-                <div class="flex">
+                <div class="skills-flex">
                     <div class="skills-box">
                         <i class="bi bi-filetype-java"></i>
                     </div>
@@ -104,6 +104,12 @@
                     </div>
                     <div class="skills-box">
                         <i class="bi bi-filetype-js"></i>
+                    </div>
+                    <div class="skills-box">
+                        <i class="bi bi-filetype-json"></i>
+                    </div>
+                    <div class="skills-box">
+                        <i class="bi bi-filetype-sql"></i>
                     </div>
                 </div>
             </div>
