--- a/index.html
+++ b/index.html
@@ -152,6 +152,23 @@
                 </div>
             </div>
         </section>
+
+        <section class="portfolio">
+            <div class="interface">
+                <h2 class="title">PROJETOS</h2>
+                <div class="flex">
+                    <div class="img-port" style="background-image: url(img/chess-game.png)">
+                        <div class="overlay">Chess Game</div>
+                    </div>
+                    <div class="img-port" style="background-image: url(img/sales-web.png);">
+                        <div class="overlay">Sales Web</div>
+                    </div>
+                    <div class="img-port" style="background-image: url();">
+                        <div class="overlay">Chess Game</div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
