Fale comigo implementado

--- a/index.html
+++ b/index.html
@@ -169,6 +169,19 @@
                 </div>
             </div>
         </section>
+        
+        <section class="form">
+            <div class="interface">
+                <h2 class="title">FALE <span>COMIGO</span></h2>
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Nome completo:" required> <!--Placeholder -> texto que fica no input indicando o que deve ser digitado pelo usuário || required define o campo como obrigatório-->
+                    <input type="text" name="" id="" placeholder="Email:" required> 
+                    <input type="text" name="" id="" placeholder="Celular:"> 
+                    <textarea name="" id="" placeholder="Mensagem" required></textarea>
+                    <div class="btn-send"><input type="submit" value="ENVIAR"></div>
+                </form>
+            </div>
+        </section>
     </main>
 </body>
 
