--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
                     <div class="img-port" style="background-image: url(img/sales-web.png);">
                         <div class="overlay">Sales Web</div>
                     </div>
-                    <div class="img-port" style="background-image: url();">
-                        <div class="overlay">Chess Game</div>
+                    <div class="img-port" style="background-image: url(img/Schedule.jpg);">
+                        <div class="overlay">User's Schedule</div>
                     </div>
                 </div>
             </div>
