--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <script src="script.js"></script>
     <title>Portfolio</title>
 </head>
@@ -27,10 +28,10 @@
 
             <nav class="menu-desktop">
                 <ul>
-                    <li><a href="http://">Inicio</a></li>
-                    <li><a href="http://">Habilidades</a></li>
-                    <li><a href="http://">Sobre</a></li>
-                    <li><a href="http://">Projetos</a></li>
+                    <li><a href="#inicio">Inicio</a></li>
+                    <li><a href="#habilidades">Habilidades</a></li>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#projetos">Projetos</a></li>
                 </ul>
             </nav>
 
@@ -87,37 +88,40 @@
             </div>
         </section>
 
+
         <section class="skills">
-            <div class="interface">
-                <h2 class="title">HABILIDADES</h2>
-                <div class="skills-flex">
-                    <div class="skills-box">
-                        <i class="bi bi-filetype-java"></i>
-                    </div>
-                    <div class="skills-box">
-                        <i class="bi bi-filetype-cs"></i>
-                    </div>
-                    <div class="skills-box">
-                        <i class="bi bi-filetype-html"></i>
-                    </div>
-                    <div class="skills-box">
-                        <i class="bi bi-filetype-css"></i>
-                    </div>
-                    <div class="skills-box">
-                        <i class="bi bi-filetype-js"></i>
-                    </div>
-                    <div class="skills-box">
-                        <i class="bi bi-filetype-json"></i>
-                    </div>
-                    <div class="skills-box">
-                        <i class="bi bi-filetype-sql"></i>
+            <div class="w3-container w3-center w3-animate-left">
+                <div class="interface" id="habilidades">
+                    <h2 class="title">HABILIDADES</h2>
+                    <div class="skills-flex">
+                        <div class="skills-box">
+                            <i class="bi bi-filetype-java"></i>
+                        </div>
+                        <div class="skills-box">
+                            <i class="bi bi-filetype-cs"></i>
+                        </div>
+                        <div class="skills-box">
+                            <i class="bi bi-filetype-html"></i>
+                        </div>
+                        <div class="skills-box">
+                            <i class="bi bi-filetype-css"></i>
+                        </div>
+                        <div class="skills-box">
+                            <i class="bi bi-filetype-js"></i>
+                        </div>
+                        <div class="skills-box">
+                            <i class="bi bi-filetype-json"></i>
+                        </div>
+                        <div class="skills-box">
+                            <i class="bi bi-filetype-sql"></i>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
 
         <section class="about">
-            <div class="interface">
+            <div class="interface" id="sobre">
                 <div class="flex">
                     <div class="img-about">
                         <div id="me-rio">
@@ -126,7 +130,7 @@
                     </div>
                     <div class="txt-about">
                         <h2>Muito prazer, </br><span>sou Caio Braga</span></h2>
-                    </br>
+                        </br>
                         <p>Sou estudante de Ciência da Computação em progresso na Universidade Católica de Pernambuco.
                             Sempre fui apaixonado por tecnologia e sou bastante empenhado na minha carreira e meus
                             objetivos. Sou extremamente comunicativo (até demais kk) e amo viajar, sou apaixonado pelas
@@ -155,7 +159,7 @@
         </section>
 
         <section class="portfolio">
-            <div class="interface">
+            <div class="interface" id="projetos">
                 <h2 class="title">PROJETOS</h2>
                 <div class="flex">
                     <div class="img-port" style="background-image: url(img/chess-game.png)">
@@ -170,14 +174,15 @@
                 </div>
             </div>
         </section>
-        
+
         <section class="form">
             <div class="interface">
                 <h2 class="title">FALE <span>COMIGO</span></h2>
                 <form action="">
-                    <input type="text" name="" id="" placeholder="Nome completo:" required> <!--Placeholder -> texto que fica no input indicando o que deve ser digitado pelo usuário || required define o campo como obrigatório-->
-                    <input type="text" name="" id="" placeholder="Email:" required> 
-                    <input type="text" name="" id="" placeholder="Celular:"> 
+                    <input type="text" name="" id="" placeholder="Nome completo:" required>
+                    <!--Placeholder -> texto que fica no input indicando o que deve ser digitado pelo usuário || required define o campo como obrigatório-->
+                    <input type="text" name="" id="" placeholder="Email:" required>
+                    <input type="text" name="" id="" placeholder="Celular:">
                     <textarea name="" id="" placeholder="Mensagem" required></textarea>
                     <div class="btn-send"><input type="submit" value="ENVIAR"></div>
                 </form>
