--- a/index.html
+++ b/index.html
@@ -32,12 +32,24 @@
                     <li><a href="#habilidades">Habilidades</a></li>
                     <li><a href="#sobre">Sobre</a></li>
                     <li><a href="#projetos">Projetos</a></li>
+                    <li><a href="#contatos">Contato</a></li>
                 </ul>
             </nav>
 
             <div class="btn-header">
-                <a href="http://">
-                    <button>Contato</button>
+                <a>
+                    <button>Sociais</button>
+                </a>
+            </div>
+            <div class="btn-header btn-rede">
+                <a>
+                    <button>
+                        <div id="redesSociais" class="redes-sociais">
+                            <a href="#" target="_blank"><i class="bi bi-facebook"></i></a>
+                            <a href="#" target="_blank"><i class="bi bi-twitter"></i></a>
+                            <a href="#" target="_blank"><i class="bi bi-instagram"></i></a>
+                        </div>
+                    </button>
                 </a>
             </div>
         </div>
@@ -176,7 +188,7 @@
         </section>
 
         <section class="form">
-            <div class="interface">
+            <div class="interface" id="contatos">
                 <h2 class="title">FALE <span>COMIGO</span></h2>
                 <form action="">
                     <input type="text" name="" id="" placeholder="Nome completo:" required>
