--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
             </nav>
 
             <div class="btn-header">
-                <a>
+                <a href="#" onclick="toggleButtons()">
                     <button>Sociais</button>
                 </a>
             </div>
-            <div class="btn-header btn-rede">
-                <a>
+            <div class="btn-rede">
+                <a href="#" onclick="toggleButtons()">
                     <button>
                         <div id="redesSociais" class="redes-sociais">
                             <a href="#" target="_blank"><i class="bi bi-facebook"></i></a>
