fixing social button

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                 <a href="#" onclick="toggleButtons()">
                     <button>
                         <div id="redesSociais" class="redes-sociais">
-                            <a href="#" target="_blank"><i class="bi bi-facebook"></i></a>
-                            <a href="#" target="_blank"><i class="bi bi-twitter"></i></a>
-                            <a href="#" target="_blank"><i class="bi bi-instagram"></i></a>
+                            <a href="https://www.linkedin.com/in/caiotbraga" target="_blank"><i class="bi bi-linkedin"></i></a>
+                            <a href="https://www.github.com/caiotbraga" target="_blank"><i class="bi bi-github"></i></a>
+                            <a href="https://www.instagram.com/caiotbraga" target="_blank"><i class="bi bi-instagram"></i></a>
                         </div>
                     </button>
                 </a>
